Refactor code into functions, update score and health to be persistent

--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
 
 
     <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js"></script>
+
+    <script src="levels.js"></script>
+    <script src="player_functions.js"></script>
+    <script src="npc_functions.js"></script>
+    <script src="global_functions.js"></script>
     <script src="game.js"></script>
+
+
 
 
 </body>
